# rusty-machine

./: .env  .gitignore  Cargo.toml  README.md  app.py  benchmark.py  build.rs  paper_guide.md  pyproject.toml  requirements.txt  test.py  wsl_build.sh
.streamlit/: config.toml
paper/: derivations.tex  final_paper.tex  presentation_graphs.tex
rustymachine_api/: models.py
src/: context.rs  ffi.rs  kernels.cu  lib.rs  ops.rs
